fixed the weird AOS double scroll issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -349,7 +349,7 @@ padding (To centralize tag elements) is minimized.
 */
 
 .intro-div {
-    padding: 3em 17.5%;
+    padding: 100px 17.5%;
     max-height: 1200px;
 
     display: flex;
@@ -570,7 +570,7 @@ input:checked + .slider:before {
     position: relative;
 }
 .projects-intro h1 {
-    padding: 4rem 0 0 0;
+    padding: 100px 0 0 0;
 }
 .projects-intro hr {
     width: 22.5%;
@@ -583,7 +583,7 @@ input:checked + .slider:before {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap : 1rem;
-    padding: 3rem 11.5% 6rem 11.5%;
+    padding: 3rem 11.5% 100px 11.5%;
 }
 .flip-card-front h3 {
     color: #fff;
@@ -599,13 +599,13 @@ input:checked + .slider:before {
 }
 @media screen and (min-width: 600px) {
     .projects-container {
-        padding: 3rem 5% 6rem 5%;
+        padding: 3rem 5% 100px 5%;
     }
 }
 @media screen and (min-width: 994px) {
     .projects-container {
         grid-gap: 2rem;
-        padding: 3rem 19% 6rem 19%;
+        padding: 3rem 19% 100px 19%;
     }
 }
 
@@ -794,18 +794,18 @@ input:checked + .slider:before {
 .tech-skills {
     text-align: center;
     line-height: 3;
-    padding: 50px 19%;
+    padding: 100px 19%;
 }
 
 @media screen and (max-width: 992px) {
     .tech-skills {
-        padding: 50px 11%;
+        padding: 100px 11%;
     }
     div.connect-section {
         padding: 50px 14%;
     }
     div.work-with-me {
-        padding: 3rem 12%;
+        padding: 100px 12%;
     }
     footer.main-footer {
         padding: 75px 14%;
@@ -1051,7 +1051,7 @@ a:link, a:visited {
 .work-with-me {
     display: block;
     text-align: center;
-    padding: 3rem 18%;
+    padding: 100px 18%;
 }
 
 .work-intro h1 {
@@ -1092,7 +1092,7 @@ a:link, a:visited {
 .main-footer {
     background: #484848;
     text-align: center;
-    padding: 75px 19%;
+    padding: 100px 19%;
     color: rgba(255, 255, 255, 1);
     font-size: 0.9em;
 }
